--- a/스마트독서실시스템/smart_studyroom_system.cfg
+++ b/스마트독서실시스템/smart_studyroom_system.cfg
@@ -2,12 +2,14 @@
 <sitelist>
 	<site id="MainFrm.DockSite1">
 		<zone kind="VERT">
-			<zone kind="HORZ" size="321" dsize="0.75175644028103">
-				<zone kind="PANEL" id="MainFrm.NavigatorDockPanel1" visible="1" size="58" dsize="0.0484140233722871"/>
-				<zone kind="PANEL" id="MainFrm.CodeBuildInfoDockPanel1" visible="1" size="100" dsize="0.0834724540901503"/>
-				<zone kind="PANEL" id="MainFrm.CallTreeDockPanel1" visible="1" size="87" dsize="0.0726210350584307"/>
-				<zone kind="HORZ" size="953" dsize="0.795492487479132">
-					<zone kind="TABS" activetab="0" size="953" dsize="1" isspace="1">
+			<zone kind="HORZ" size="505" dsize="0.767477203647416">
+				<zone kind="PANEL" id="MainFrm.NavigatorDockPanel1" visible="1" size="316" dsize="0.209827357237716"/>
+				<zone kind="PANEL" id="MainFrm.CodeBuildInfoDockPanel1" visible="1" size="32" dsize="0.0212483399734396"/>
+				<zone kind="PANEL" id="MainFrm.CallTreeDockPanel1" visible="1" size="32" dsize="0.0212483399734396"/>
+				<zone kind="HORZ" size="1126" dsize="0.747675962815405">
+					<zone kind="TABS" activetab="5" size="1126" dsize="1" isspace="1">
+						<zone kind="PANEL" id="MainFrm.EditorPanel5" visible="1"/>
+						<zone kind="PANEL" id="MainFrm.EditorPanel4" visible="1"/>
 						<zone kind="PANEL" id="MainFrm.EditorPanel3" visible="1"/>
 						<zone kind="PANEL" id="MainFrm.EditorPanel2" visible="1"/>
 						<zone kind="PANEL" id="MainFrm.NotesPanel" visible="1"/>
@@ -18,7 +20,7 @@
 					<zone kind="PANEL" id="MainFrm.ClipboardHistoryDockPanel1" visible="0" size="80" dsize="0.126182965299685"/>
 				</zone>
 			</zone>
-			<zone kind="TABS" activetab="0" size="106" dsize="0.24824355971897">
+			<zone kind="TABS" activetab="0" size="153" dsize="0.232522796352584">
 				<zone kind="PANEL" id="MainFrm.MessagesDockPanel1" visible="1"/>
 				<zone kind="PANEL" id="MainFrm.TerminalDockPanel1" visible="1"/>
 				<zone kind="PANEL" id="MainFrm.FindInFilesDockPanel1" visible="0"/>
